# robot_dev

./: .gitignore  README.md
src/linker_a7_ros2_control/: CMakeLists.txt  linker_a7_ros2_control.xml  package.xml
src/linker_a7_ros2_control/include/linker_a7_ros2_control/: a7_lite_can.hpp  a7_lite_system.hpp
src/linker_a7_ros2_control/src/: a7_lite_can.cpp  a7_lite_safety_node.cpp  a7_lite_system.cpp
src/linker_a7_ros2_control/test/: test_a7_lite_protocol.cpp
src/linker_manip_interfaces/: CMakeLists.txt  package.xml
src/linker_manip_interfaces/action/: Grasp.action  MoveArm.action
src/linker_manip_interfaces/msg/: FingerTactile.msg  HandState.msg  HandTactile.msg
src/linker_manip_interfaces/srv/: SetHandAngles.srv
src/linker_manipulation/: package.xml  setup.cfg  setup.py
src/linker_manipulation/config/: robot.yaml  robot_l20lite.yaml  robot_o6.yaml
src/linker_manipulation/config/moveit/: a7_lite_right.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_controllers_ros2_control.yaml  ompl_planning.yaml
src/linker_manipulation/launch/: bringup.launch.py  moveit_ros2_control.launch.py  moveit_table.launch.py  ros2_control_bringup.launch.py  ros2_control_moveit.launch.py  tactile_heatmap.launch.py  visualize.launch.py  water_bottle_demo.launch.py
src/linker_manipulation/linker_manipulation/: __init__.py  a7_driver_node.py  config.py  demo_task_node.py  grasp_controller_node.py  joint_target_recorder_node.py  l20lite_driver_node.py  moveit_pose_goal_node.py  ros2_control_description.py  ros_utils.py  sdk_loader.py  tactile.py  tactile_heatmap_node.py
src/linker_manipulation/resource/: linker_manipulation
src/linker_manipulation/rviz/: a7_lite_visualization.rviz  moveit_table.rviz
src/linker_manipulation/urdf/: a7_lite_right_mesh.urdf  a7_lite_right_skeleton.urdf  a7_lite_right_visual.urdf
(+8 files in other folders)
